--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,14 +1,15 @@
 .sidebar {
-    height: 96vh;
+    height: 100vh;
     /* overflow: hidden; */
     display: grid;
     grid-template-rows: 1fr 50% 1fr;
-    margin: 2vh;
+    /* margin: 2vh; */
     margin-bottom: 100px;
     box-sizing: border-box;
-    border: 2px solid black;
-    border-radius: 5px;
+    /* border: 2px solid black; */
+    /* border-radius: 5px; */
     transition: 0.5s;
+    width: 100%;
 }
 
 .logo {
@@ -17,13 +18,12 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 0.5rem;
+    font-size: 0.7rem;
 }
 
 .nav {
     display: grid;
     grid-row: 2;
-    text-align: center;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -32,12 +32,16 @@
 .list {
     list-style-type: none;
     padding: 0;
+    text-align: left;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .listItem {
     margin: 1vh auto;
     font-size: 1.5rem;
     font-weight: 300;
+    width: 100%;
 }
 
 .active {
@@ -50,7 +54,14 @@
     grid-row: 3;
     justify-content: center;
     align-items: center;
-    font-size: 3rem;
+}
+
+.collapseExpandButton img {
+    border: 1.5px solid #1f1f1f;
+    padding: 0.5rem;
+    border-radius: 50%;
+    width: 100%;
+    -webkit-user-drag: none;
 }
 
 .navExpanded {
